# DistinctElementMethod

./: .gitignore  CMakeLists.txt  README.md
UnitTests/: CMakeLists.txt  rectangle.stl  sphere0.03R2D.stl  sphere0.3R2D.stl
UnitTests/cu/: CMakeLists.txt  mainCu.cu
UnitTests/cxx/: CMakeLists.txt  GpuClass.cu  GpuClass.cuh  GpuClassKernel.cuh  main.cpp
src/: CMakeLists.txt
src/Base/: Base.cu  CMakeLists.txt
src/ContactDetection/: CMakeLists.txt  ContactConfig.h  ContactDetection.cu  ContactDetection.cuh
src/ContactDetection/BroadPhase/: BroadPhase.cpp  BroadPhase.cu  BroadPhase.cuh  BroadPhase.h  ITree.h  ITreeBuilder.h
src/ContactDetection/BroadPhase/Config/: TreeConfig.h  TreeType.h
src/ContactDetection/BroadPhase/Octree/: Octree.h  OctreeBuilder.cu  OctreeBuilder.cuh  OctreeBuilderKernel.cuh
src/ContactDetection/BroadPhase/QuadTree/: QuadTree.h  QuadTreeBuilder.cu  QuadTreeBuilder.cuh  QuadTreeBuilderKernel.cuh
src/ContactDetection/NarrowPhase/: NarrowPhase.cu  NarrowPhase.cuh
src/ContactDetection/NarrowPhase/EPA/: EPA.cpp  EPA.cu  EPA.cuh  EPA.h
src/ContactDetection/NarrowPhase/GJK/: GJK.cpp  GJK.cu  GJK.cuh  GJK.h
src/ContactDetection/NarrowPhase/Simplex/: Simplex.cpp  Simplex.cu  Simplex.cuh  Simplex.h
src/ForceModels/: CMakeLists.txt  ForceModel.cu  ForceModel.cuh
src/ForceModels/LinearSpringDashPot/: LSD.cu  LSD.cuh
src/Insertion/: CMakeLists.txt  InsertionCpu.cpp  InsertionCpu.h
src/Insertion/Domain/: Domain.cpp  Domain.h
src/Insertion/Regions/: CubeInsertionRegion.cpp  CubeInsertionRegion.h  CylindricalRegion.cpp  CylindricalRegion.h  InsertionRegion.cpp  InsertionRegion.h
src/Output/: CMakeLists.txt  Output.cu  Output.cuh  QuadTreeWriter.cu  QuadTreeWriter.cuh
src/Particle/: CMakeLists.txt  Particle.cpp  Particle.hpp  Polyhedral.cpp  Polyhedral.h  Polyhedral.hpp  Spherical.cpp  Spherical.h  Spherical.hpp
src/Particle/Config/: AppConfig.h  BaseConfig.h  Config.h  ConfigParser.h  ConfigParserBase.h  Parser.h
src/Particle/Material/: ConfigMaterial.h  Material.cpp  Material.hpp
src/Particle/Shape/: Shape.cpp  Shape.hpp
src/Particle/Shape/Polyhedral/: Polyhedral.cpp  Polyhedral.h
src/Particle/Shape/Polytope/: Polytope.cpp  Polytope.hpp
src/Particle/Shape/Sphere/: Sphere.cpp  Sphere.hpp
src/Simulate/: CMakeLists.txt  Simulate.cu  Simulate.cuh  Simulate.h
src/Simulate/Base/: Base.cu  Base.cuh
src/TimeIntegrator/: CMakeLists.txt  TimeIntegrator.cpp  TimeIntegrator.cu  TimeIntegrator.cuh  TimeIntegrator.h
src/TimeIntegrator/EulerIntegrator/: EulerIntegrator.cu  EulerIntegrator.cuh  EulerIntegrator.h  EulerIntegratorKernel.cu  EulerIntegratorKernel.cuh
src/TimeIntegrator/VerletIntegrator/: VerletIntegrator.cpp  VerletIntegrator.cu  VerletIntegrator.cuh  VerletIntegrator.h  VerletIntegratorKernel.cu  VerletIntegratorKernel.cuh
src/Tools/: CMakeLists.txt  CudaHelper.cpp  CudaHelper.hpp  Quaternion.cpp  Quaternion.hpp  Vector.h
src/Tools/AABB/: AABB.hpp
src/Tools/Array/: Array.h
src/Tools/ArthmiticOperator/: MathOperators.hpp
src/Tools/Config/: Config.h  Parser.h
src/Tools/ObjReader/: ObjReader.h
src/Tools/Position/: Position.cpp  Position.h
src/Tools/StlReader/: StlReader.cpp  StlReader.h
src/Tools/Thrust/: NoInitThrust.cuh
src/Tools/Vector/: Vector.cu  Vector.h
src/Tools/nlohmann/: json.h  json.hpp
src/Tools/objreader/: ObjReader.cpp  ObjReader.h
src/Tools/quaternion/: quaternion.cpp  quaternion.hpp
src/Tools/tinyobjloader/: objloader.cpp  objloader.h
